<resources>
    <string name="app_name">Customer Client</string>

    <!-- Экран входа -->
    <string name="label_sign_in">Вход</string>
    <string name="label_sign_up">Регистрация</string>

    <!-- Главный экран -->
    <string name="title_home">Главная</string>
    <string name="title_bills">Счета</string>
    <string name="description_for_adding_bill_button">Кнопка для создания нового счета</string>
    <string name="title_all_bills">Все счета</string>
    <string name="title_credits">Кредиты</string>
    <string name="description_for_adding_credit_button">Кнопка для создания нового кредита</string>
    <string name="title_all_credits">Все кредиты</string>

    <!-- Экран с историей -->
    <string name="title_history">История</string>
    <string name="open_bill_title">Открыть счёт</string>
    <string name="take_out_loan_title">Взять кредит</string>
    <string name="available">Доступно</string>
    <string name="top_up">Внести деньги</string>
    <string name="withdraw">Снять деньги</string>
    <string name="transfer">Перевод на счёт</string>

    <string name="title_bill_info">Информация о счёте</string>
    <string name="title_credit_info">Информация о кредите</string>
    <string name="title_create_credit">Создать кредит</string>
    <string name="top_up_amount">Сумма зачисления</string>
    <string name="withdraw_amount">Сумма снятия</string>
    <string name="credit_amount">Сумма кредита</string>

    <!-- Channel -->
    <string name="default_notification_channel_id">notification</string>

</resources>