<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/backBillInfoButton"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"

        android:src="@drawable/ic_round_arrow_back_32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/availableTitle"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/available"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="@+id/backBillInfoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backBillInfoButton" />

    <TextView
        android:id="@+id/moneyTitle"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"

        android:layout_marginTop="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/topUpButton"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"

        android:clickable="true"
        android:focusable="true"

        app:cardCornerRadius="16dp"

        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneyTitle">

        <TextView
            android:id="@+id/topUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/top_up"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            android:contentDescription="top up description"
            android:src="@drawable/ic_round_add_32dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/withdrawMoneyButton"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="16dp"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/topUpButton">

        <TextView
            android:id="@+id/withdrawMoneyTitle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"

            android:text="@string/withdraw"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            android:contentDescription="withdraw description"
            android:src="@drawable/ic_outline_remove_32dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/closeBillButton"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"

        android:clickable="true"
        android:focusable="true"

        app:cardCornerRadius="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topUpButton">

        <TextView
            android:id="@+id/closeBillTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="Закрыть счёт"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            android:contentDescription=""
            android:src="@drawable/round_close_24" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"

        android:background="@drawable/history_card_background"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeBillButton">

        <TextView
            android:id="@+id/historyTitle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/title_history"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"

            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/billHistoryRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/historyTitle"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"

            tools:listitem="@layout/item_history_bill_info" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>